--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             font-size: 24px;
             font-weight: bold;
             text-decoration: none;
-            color: #cba5f0;
+            color: #050157;
 			font-size:2rem;
 			  text-shadow: 1px 1px white;
 
@@ -124,7 +124,7 @@
 
         /* Social Media Sharing Footer Styles */
         .social-footer {
-            background-color: grey;
+            background-color: #9d9da3;
             padding: 10px 0;
             text-align: center;
             font-size: 1.2rem;
@@ -146,7 +146,7 @@
 
         .social-footer a:hover {
             color: #f1c40f; /* Change to your desired hover color */
-        
+        color:#00aaed;
 		}
 
         /* Zrex Logo and Link Styles */
